--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
