--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@typescript-eslint/parser": "^4.33.0",
     "activestorage": "^5.2.6",
     "axios": "^0.27.2",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.5",
+    "ts-migrate": "^0.1.28",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,5 +46,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babel-core": "^7.0.0-bridge.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.9.2"
   }
 }
