--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.5",
     "ts-migrate": "^0.1.28",
+    "typescript": "^4.7.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
